--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,30 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^0.27.1",
+    "dotenv": "8.2.0",
+    "dotenv-webpack": "^7.1.0",
+    "formik": "^2.2.9",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^5.2.7",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "sass": "^1.42.0",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
