--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -15,10 +15,13 @@
     "dotenv-webpack": "^7.1.0",
     "formik": "^2.2.9",
     "react-redux": "^7.2.3",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.8.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "react-stripe-checkout": "^2.6.3",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
