--- a/frontend/ui/package.json
+++ b/frontend/ui/package.json
@@ -6,22 +6,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
+    "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.27.1",
     "dotenv": "8.2.0",
     "dotenv-webpack": "^7.1.0",
     "formik": "^2.2.9",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-redux": "^7.2.3",
-    "react-router-dom": "^6.8.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "yup": "^0.32.11",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "5.0.1",
     "react-stripe-checkout": "^2.6.3",
+    "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
-    "styled-components": "^5.3.1"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.3.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
